# blitz-backup

./: .clang-tidy  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/: CODEOWNERS
.github/workflows/: cmake-single-platform.yml  rust.yml
src/: CMakeLists.txt  backend.cpp  backend.h  config.kcfg  config.kcfgc  main.cpp  main.rs  resources.qrc  restic.cpp  restic.h  snapshot.cpp  snapshot.h  snapshotmodel.cpp  snapshotmodel.h
src/contents/ui/: Main.qml  SnapshotDelegate.qml  main.qml
ui/: appwindow.slint
