[package]
name = "blitz-backup"
version = "0.1.0"
authors = ["notfirefox <138280734+notfirefox@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `forbid` is currently not compatible with slint
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
chrono = "0.4.37"
directories = "5.0.1"
rustic_backend = "0.1.1"
rustic_core = "0.2.0"
serde = "1.0.197"
serde_json = "1.0.115"
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"
